# hobgoblin-engine

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CMakeSettings.json  CODEANALYSIS.ruleset  Conan_build.bash  Conan_install_dependencies.bash  Conan_install_dependencies.bat  Hobgoblin Engine.sln  LICENCE  NOTES.txt  README.md  SpaceshipPhysics.sln  TODO.txt  cloc.bat  conanfile.py  conanw.bash  editall.bash  formatw.bash  temp.txt
Engine/: CMakeLists.txt  CMakeSettings.json  Conan_install.bat  README.md  conanfile.txt
Engine/Components/: CMakeLists.txt
Engine/Components/ColDetect/: CMakeLists.txt
Engine/Components/Common/: CMakeLists.txt
Engine/Components/Graphics/: CMakeLists.txt
Engine/Components/Math/: CMakeLists.txt
Engine/Components/Preprocessor/: CMakeLists.txt
Engine/Components/Private/: CMakeLists.txt
Engine/Components/QAO/: README.md
Engine/Components/RigelNet/: CMakeLists.txt  PROTOCOL.txt  TODOLIST.txt
Engine/Components/Utility/: CMakeLists.txt
Engine/DebugExe/Source/: SpriteManagerMain.cpp  TimingMain.cpp
Engine/Docs/: Pathfinding.txt  zTODO.txt
Engine/Test/Source/: Gsl_pointers_test.cpp  QAO_serialization_test.cpp  Qao_test.cpp  RigelNet_test.cpp  Util_test.cpp
Engine/ZTCpp/Lib/: ztcpp.lib
EngineCore/: CMakeLists.txt  CODEANALYSIS.ruleset  Conan_install.bat  README.md  conanfile.txt
EngineCore/DebugExe/: CMakeLists.txt
EngineCore/DebugExe/Source/: BrushMain.cpp  CollisionsMain.cpp  LoggingMain.cpp  RcssPreprocessorMain.cpp  RigelNetMain.cpp  SerializationMain.cpp  SpriteBatchMain.cpp  SpriteManagerMain.cpp  TextRect.cpp  TimingMain.cpp
EngineCore/Docs/: Chipmunk_integration.txt  Useful_links.txt
EngineCore/Modules/: CMakeLists.txt  README.md
EngineCore/Modules/ChipmunkPhysics/: CMakeLists.txt
EngineCore/Modules/ColDetect/: CMakeLists.txt
EngineCore/Modules/Common/: CMakeLists.txt
EngineCore/Modules/Config/: CMakeLists.txt
EngineCore/Modules/Format/: CMakeLists.txt
EngineCore/Modules/Graphics/: CMakeLists.txt
EngineCore/Modules/Input/: CMakeLists.txt
EngineCore/Modules/Logging/: CMakeLists.txt
EngineCore/Modules/QAO/: CMakeLists.txt  README.md
EngineCore/Modules/RigelNet/: CMakeLists.txt  README.md  TODOLIST.txt
EngineCore/Modules/RmlUi/: CMakeLists.txt
EngineCore/Modules/Utility/: CMakeLists.txt
EngineCore/Modules/Window/: CMakeLists.txt
EngineCore/Modules_L00_Foundation/: CMakeLists.txt  README.MD
EngineCore/Modules_L00_Foundation/S00_PDef/: CMakeLists.txt
EngineCore/Modules_L00_Foundation/S01_Common/: CMakeLists.txt
EngineCore/Modules_L00_Foundation/S01_Format/: CMakeLists.txt  README.md
EngineCore/Modules_L00_Foundation/S01_GSL/: CMakeLists.txt
EngineCore/Modules_L00_Foundation/S01_Preprocessor/: CMakeLists.txt
EngineCore/Modules_L00_Foundation/S02_HGExcept/: CMakeLists.txt
EngineCore/Modules_L00_Foundation/S03_Logging/: CMakeLists.txt
EngineCore/Modules_L00_Foundation/S04_Unicode/: CMakeLists.txt
EngineCore/Modules_L01_Utilities/: CMakeLists.txt  README.MD
EngineCore/Modules_L01_Utilities/S00_Common/: CMakeLists.txt
EngineCore/Modules_L01_Utilities/S00_Math/: CMakeLists.txt
EngineCore/Modules_L01_Utilities/S01_Math/: CMakeLists.txt
EngineCore/Modules_L01_Utilities/S01_Utility/: CMakeLists.txt
EngineCore/Modules_L01_Utilities/S02_Utility/: CMakeLists.txt
EngineCore/Modules_L02_Principals/: CMakeLists.txt  README.MD
EngineCore/Modules_L02_Principals/S00_ChipmunkPhysics/: CMakeLists.txt
EngineCore/Test/: CMakeLists.txt
GameJam/Source/: CMakeLists.txt  Cell_kind.hpp  Character.cpp  Character.hpp  Character_renderer.cpp  Character_renderer.hpp  Collisions.cpp  Collisions.hpp  Config.hpp  Context_factory.cpp  Context_factory.hpp  Engine.hpp  Environment_manager.cpp  Environment_manager.hpp  Environment_manager_interface.hpp  Host_menu_manager.cpp  Host_menu_manager.hpp  Host_menu_manager_interface.hpp  Join_menu_manager.cpp  Join_menu_manager.hpp  Join_menu_manager_interface.hpp  Lobby_frontend_manager.cpp  Lobby_frontend_manager.hpp  Lobby_frontend_manager_interface.hpp  Loot.cpp  Loot.hpp  Main.cpp  Main_gameplay_manager.cpp  Main_gameplay_manager.hpp  Main_gameplay_manager_interface.hpp  Main_menu_manager.cpp  Main_menu_manager.hpp  Main_menu_manager_interface.hpp  Names.hpp  Player_controls.hpp  Resource_manager.cpp  Resource_manager.hpp  Resource_manager_interface.hpp  Simple_zerotier.cpp  Simple_zerotier.hpp  (+2 more)
Hobgoblin/: CMakeLists.txt  CMakeSettings.json  CODEANALYSIS.ruleset  Conan_install.bat  Hobgoblin.vcxproj  Hobgoblin.vcxproj.filters  On_qao_serialization.txt  README.md  conanfile.txt  zTODO.txt
Hobgoblin/Engine/: CMakeLists.txt
Hobgoblin/Hobgoblin_impl/: Main.cpp  TextRect.cpp
Hobgoblin/Hobgoblin_include/: Common.hpp  DEP_Macros.hpp  QAO.hpp  RigelNet_Macros.hpp  Utility.hpp
Hobgoblin/Test/: README.md
Hobgoblin/docs/: Useful_links.txt
Hobgoblin/lib/: hobgoblin32-d.lib  hobgoblin64-d.lib
HobgoblinTest/: CMakeLists.txt  CMakeSettings.json  Conan_install.bat  Hobgoblin Test.vcxproj  README.md  conanfile.txt
HobgoblinTest/Debug/: vc141.idb
HobgoblinTest/source/: QAO_serialization_test.cpp  Qao_test.cpp  RigelNet_test.cpp  Util_test.cpp  test.cpp
Overlays/GridGoblin/: CMakeLists.txt
Overlays/SPeMPE/: CMakeLists.txt  CMakeSettings.json  Conan_install.bat  README.md  conanfile.txt
ProjectSkeletons/SPeMPE_CMake_Empty/: CMakeLists.txt  CMakeSettings.json  Conan_install_dependencies.bat  conanfile.py
ProofOfConceptProjects/GridWorld/: CMakeLists.txt
ProofOfConceptProjects/Typhon/: CMakeLists.txt  CMakeSettings.json  Conan_install.bat  README.md  conanfile.txt
Raynor/: CMakeLists.txt  CMakeSettings.json  Conan_install.bat  conanfile.txt
Raynor/source/: Camera.hpp  Main.cpp  Matrix.hpp  Vector.hpp
Tools/AntimonyAnimator/: AAMain.cpp  CMakeLists.txt
Tools/FrameTimingTester/: CMakeLists.txt  FTTMain.cpp
Typhon/: CMakeLists.txt  CMakeSettings.json  Conan_install.bat  TODO.txt  Typhon.vcxproj  Typhon.vcxproj.filters
Typhon/docs/: TODO.txt
Typhon/res/: WhiteGlow.png~
Typhon/source/: src_list.txt
(+1752 files in other folders)
