# Copyright 2024 Jovan Batnozic. Released under MS-PL licence in Serbia.
# See https://github.com/jbatnozic/Hobgoblin?tab=readme-ov-file#licence

add_subdirectory("S00_PDef")
add_subdirectory("S01_Common")
add_subdirectory("S01_Format")
add_subdirectory("S01_GSL")
add_subdirectory("S01_Preprocessor")
add_subdirectory("S02_HGExcept")
add_subdirectory("S03_Logging")
add_subdirectory("S04_Unicode")
