# Copyright 2024 Jovan Batnozic. Released under MS-PL licence in Serbia.
# See https://github.com/jbatnozic/Hobgoblin?tab=readme-ov-file#licence

add_subdirectory("S00_ChipmunkPhysics")
add_subdirectory("S00_HGConfig")
add_subdirectory("S00_Input")
add_subdirectory("S00_QAO")
add_subdirectory("S00_RigelNet")
add_subdirectory("S00_Window")
add_subdirectory("S01_ColDetect")
add_subdirectory("S01_Graphics")
add_subdirectory("S02_RmlUi")
